# codecapy

./: .all-contributorsrc  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  database.py  main.py  models.py  prompts.py
src/execute/: __init__.py  comments.py  config.py  models.py  prompts.py
src/generate/: __init__.py  config.py  models.py  prompts.py
src/github/: __init__.py  models.py
